# memory-game

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
documentation/: architecture.md  changelog.md  instructions.md  references.md  requirement_specification.md  testing_document.md  work_time_log.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli_luokkakaavio.md
src/: create_grid.py  index.py  load_image.py
src/UI/: buttons.py
src/game_logic/: memory_game.py  timer.py
src/game_loops/: game_loop.py  memory_game.py
src/sprites/: tiles.py
src/tests/: memory_game_test.py  tiles_test.py  timer_test.py
